--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="../src/assets/main.css"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Filming Theory</title>
 </head>
 <body>
 <noscript>
